tests/parsing/dimacs/errors/004_bad_clause_num_1.cnf
p cnf 1 0
